layout and styling; catalog view: completed external links, completed documentation and completed downloads; catalog view: started with geoservices

--- a/secrets.template
+++ b/secrets.template
@@ -1,6 +1,6 @@
 # -*- coding: utf-8 -*-
 
-# application secret key
+# application
 SECRET_KEY = 'abcdefghijklmnopqrstuvwxyz0123456789-#(!$&%abcdefg'
 
 # database
