--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ Flask-Bootstrap==3.3.7.1
 Flask-SQLAlchemy==2.3.2
 psycopg2==2.7.3.2
 Flask-Migrate==2.1.1
+Flask-Compress==1.4.0
+python-memcached==1.58
+Flask-Cache==0.13.1
+Flask-SQLAlchemy-Cache==0.1.5
