theme view: completed the theme slider and the map; a load of layout fixtures and bugfixes

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@ __pycache__/
 # compiled translations
 *.mo
 
+# custom logos and thumbnails
+static/images/logos/*
+static/images/thumbs/*
+
 # private configuration
 secrets.py
 
