--- a/secrets.template
+++ b/secrets.template
@@ -5,3 +5,6 @@ SECRET_KEY = 'abcdefghijklmnopqrstuvwxyz0123456789-#(!$&%abcdefg'
 
 # database
 SQLALCHEMY_DATABASE_URI = 'postgresql://user:password@host/database'
+
+# CitySDK API key
+CITYSDK_API_KEY = 'AbcDEFGHijklmNOPQrstuVWxyZ012345'
