theme view: (now really) almost completed map integration; minor bugfixes and layout fixtures

--- a/secrets.template
+++ b/secrets.template
@@ -6,5 +6,5 @@ SECRET_KEY = 'abcdefghijklmnopqrstuvwxyz0123456789-#(!$&%abcdefg'
 # database
 SQLALCHEMY_DATABASE_URI = 'postgresql://user:password@host/database'
 
-# CitySDK API key
+# CitySDK api
 CITYSDK_API_KEY = 'AbcDEFGHijklmNOPQrstuVWxyZ012345'
