fixed slick breakpoints for theme slider; prevented example database content SQL script from throwing errors due to a foreign key; some minor layout fixtures

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,8 @@ __pycache__/
 # compiled translations
 *.mo
 
-# custom logos and thumbnails
+# custom logos
 static/images/logos/*
-static/images/thumbs/*
 
 # private configuration
 secrets.py
