--- a/secrets.template
+++ b/secrets.template
@@ -7,6 +7,7 @@ SECRET_KEY = 'abcdefghijklmnopqrstuvwxyz0123456789-#(!$&%abcdefg'
 SQLALCHEMY_DATABASE_URI = 'postgresql://user:password@host/database'
 
 # address search api
+ADDRESS_SEARCH_API_URL = 'https://geo.sv.rostock.de/geocodr/query?'
 ADDRESS_SEARCH_API_KEY = 'AbcDEFGHijklmNOPQrstuVWxyZ012345'
 
 # CitySDK api
