--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-Flask==0.12.4
-Flask-Babel==0.11.2
-Flask-Bootstrap==3.3.7.1
-Flask-SQLAlchemy==2.3.2
-psycopg2==2.7.4
-Flask-Migrate==2.1.1
-Flask-Compress==1.4.0
-python-memcached==1.59
-Flask-Cache==0.13.1
-Flask-SQLAlchemy-Cache==0.1.5
-pysolr==3.7.0
-user-agents==1.1.0
-PyICU==2.0.3
+Flask
+Flask-Babel
+Flask-Bootstrap
+Flask-Caching
+Flask-Compress
+Flask-Migrate
+Flask-SQLAlchemy
+Flask-SQLAlchemy-Caching
+psycopg2
+PyICU
+pysolr
+python-memcached
+requests
+user-agents
