--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-Flask
-Flask-Babel
-Flask-Bootstrap
-Flask-Caching
-Flask-Compress
-Flask-Migrate
-Flask-SQLAlchemy
-Flask-SQLAlchemy-Caching
-psycopg2
-PyICU
-pysolr
-python-memcached
-requests
-user-agents
+Flask==1.1.4
+Flask-Babel==1.0.0
+Flask-Bootstrap==3.3.7.1
+Flask-Caching==1.8.0
+Flask-Compress==1.5.0
+Flask-Migrate==2.5.3
+Flask-SQLAlchemy==2.4.4
+Flask-SQLAlchemy-Caching==1.0.4
+psycopg2==2.8.6
+PyICU==2.4.3
+pysolr==3.9.0
+python-memcached==1.59
+requests==2.23.0
+user-agents==2.1
