--- a/secrets.template
+++ b/secrets.template
@@ -4,9 +4,15 @@ SECRET_KEY = 'abcdefghijklmnopqrstuvwxyz0123456789-#(!$&%abcdefg'
 # database
 SQLALCHEMY_DATABASE_URI = 'postgresql://user:password@host/database'
 
+# cache
+CACHE_MEMCACHED_SERVERS = ['127.0.0.1:11211']
+
 # address search api
 ADDRESS_SEARCH_API_URL = 'https://geo.sv.rostock.de/geocodr/query?'
 ADDRESS_SEARCH_API_KEY = 'AbcDEFGHijklmNOPQrstuVWxyZ012345'
 
 # CitySDK api
 CITYSDK_API_KEY = 'AbcDEFGHijklmNOPQrstuVWxyZ012345'
+
+# Solr
+SOLR_URL = 'http://127.0.0.1:8983/solr/geolotse'
