--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==1.1.4
 Flask-Babel==1.0.0
 Flask-Bootstrap==3.3.7.1
-Flask-Caching==1.8.0
+Flask-Caching
 Flask-Compress==1.5.0
 Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.4
