--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,27 @@
+alembic==1.6.5
+Babel==2.9.1
+certifi==2021.5.30
+dominate==2.6.0
 Flask==1.1.4
 Flask-Babel==1.0.0
 Flask-Bootstrap==3.3.7.1
-Flask-Caching
+Flask-Caching==1.10.1
 Flask-Compress==1.5.0
 Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.4
 Flask-SQLAlchemy-Caching==1.0.4
+greenlet==1.1.1
+importlib-metadata==4.7.1
+Mako==1.1.5
+MarkupSafe==2.0.1
 psycopg2==2.8.6
 PyICU==2.4.3
 pysolr==3.9.0
 python-memcached==1.59
+pytz==2021.1
 requests==2.23.0
+SQLAlchemy==1.4.23
+typing-extensions==3.10.0.0
+ua-parser==0.10.0
 user-agents==2.1
+zipp==3.5.0
